<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.nkozera.musclesman.Register">

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/registerTxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/inputLoginPlaceholder"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLogin"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/inputPassPlaceholder"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/input2Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input2PassPlaceholder"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginTxt"
        android:layout_alignRight="@+id/loginTxt"
        android:layout_below="@+id/input2Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/loginRegisterButton" />

</RelativeLayout>
