<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FirstLogin">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        tools:ignore="UselessParent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/welcomeNew"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/welcomeNew1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="65dp"
                android:text="@string/welcomeNew1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RelativeOverlap" />


            <TextView
                android:id="@+id/textTypeOfTrening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="140dp"
                android:text="@string/textTypeOfTrening"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="174dp"
                android:text="@string/strengthTreinigRadio" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_below="@+id/radioButton"
                android:text="@string/muscleTreinigRadio" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:layout_centerHorizontal="true"
                android:text="@string/conditionTreinigRadio" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/textAge"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/givenAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberSigned" />


            <TextView
                android:id="@+id/experiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/givenAge"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/textExprerience"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/givenExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/experiece"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/ready_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/givenExperience"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/ready_send" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>