<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.nkozera.musclesman.Measurements">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        tools:ignore="UselessParent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/measur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/your_measerements"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/AddNew"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner2"
                android:layout_centerHorizontal="true"
                android:inputType="number" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText4"
                android:layout_centerHorizontal="true"
                android:text="@string/save" />


            <TextView
                android:id="@+id/actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/set_measuremets"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>